# word-clock-reasonml

./: .dockerignore  Dockerfile  Makefile  README.md  dune  dune-project  index.css  index.html  package-lock.json  package.json  vite.config.js  word-clock-reasonml.opam
src/: App.re  dune  index.re
src/bindings/: dune
src/components/: App.re  Cell.re  Grid.re  Row.re  dune
src/types/: cell.re  dune  grid.re  row.re  word.re
src/utils/: dune  grid.re
